--- a/src/components/DevbarWrapper/DevbarWrapper.scss
+++ b/src/components/DevbarWrapper/DevbarWrapper.scss
@@ -2,10 +2,7 @@
     float: left;
     position: absolute;
     display: inline-block;
-    left: 250px;
-    width: calc(100% - 704px);
-    border-right: solid 2px grey;
-    border-left: solid 2px grey;
+    width: 100%;
     overflow-y: hidden;
     height: 100%;
 
