--- a/src/components/PhotoViewer/PhotoViewer.scss
+++ b/src/components/PhotoViewer/PhotoViewer.scss
@@ -5,7 +5,6 @@
     z-index: 3;
     top: 0;
     left: 0;
-    cursor: pointer;
 
     .photo-viewer__photo {
         position: absolute;
@@ -22,5 +21,14 @@
         z-index: 3;
         background-color: black;
         opacity: 0.6;
+    }
+    .photo-viewer__close {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        color: white;
+        opacity: 0.8;
+        z-index: 3;
+        cursor: pointer;
     }
 }
