--- a/src/components/Root/Root.scss
+++ b/src/components/Root/Root.scss
@@ -39,9 +39,10 @@ a {
 	color: var(--color);
 	font-family: var(--font-serif);
 	text-align: center;
+	padding: 20px 0;
 	p {
 		margin: 0;
-		line-height: 60px;
+		line-height: 30px;
 	}
 }
 
